--- a/src/java/AwsCredentials.properties
+++ b/src/java/AwsCredentials.properties
@@ -2,8 +2,8 @@
 #Mon May 20 21:37:27 CDT 2013
 
 #AWS Keys
-accessKey = AKIAJ7WER3Q4PDBZ4I3A
-secretKey = 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
+#ccessKey = AKIAJ7WER3Q4PDBZ4I3A
+#secretKey = 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
 
 #Euca Keys
 #accessKey = AKIFSYC4ENR0EZ0F0QD7
